# papermill_research

./: main.ipynb  notes.txt  pyproject.toml  using_concurrent_futures.py  using_dask_delayed.py  using_ray.py
output/: output-notebook-3_14-1.ipynb  output-notebook-3_14-2.ipynb  output-notebook-3_14-3.ipynb  output-notebook-3_14-4.ipynb  output-notebook-3_14-5.ipynb  output-notebook-3_14-6.ipynb  output-notebook-3_14-7.ipynb  output-notebook-3_14-8.ipynb  output-notebook-3_14-9.ipynb
